--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "google-play-scraper": "^8.0.2",
     "objects-to-csv": "^1.3.6"
   },
-  "devDependencies": {},
   "description": ""
 }
